# labor-law-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DISCLAIMER.md  HOW_TO_CONFIGURE_AI.md  LICENSE  README.md  docker-compose.yml  nginx.conf
fastapi-server/: .env.example  Dockerfile  alembic.ini  build-exe.bat  labor-law-ai.spec  laborlaw.db  pyproject.toml  run.py
fastapi-server/alembic/: env.py
fastapi-server/alembic/versions/: 0001_init_all_tables.py
fastapi-server/app/: config.py  database.py  errors.py  logging_config.py  main.py
fastapi-server/app/agents/: arbitration_guide.py  base.py  case_analysis.py  compensation_calc.py  contract_review.py  document_draft.py  evidence_analyze.py  evidence_checklist.py  registry.py  router.py  strategy_plan.py  violation_detect.py
fastapi-server/app/ai/: adapters.py  base.py  deepseek.py
fastapi-server/app/api/: admin.py  arbitration.py  auth.py  cases.py  compensation.py  consultation.py  contract_review.py  deps.py  document_gen.py  evidence.py  payment.py  settings.py
fastapi-server/app/legal_engine/: case_store.py  law_store.py
fastapi-server/app/models/: __init__.py  base.py  case.py  compensation.py  contract_review.py  document.py  evidence.py  message.py  order.py  subscription.py  user.py
fastapi-server/scripts/: create-admin.py
fastapi-server/tests/: test_admin.py  test_agents.py  test_auth.py  test_cases.py  test_compensation.py  test_consultation.py  test_contract.py  test_db.py  test_law_store.py  test_payment.py  test_router.py
scripts/: setup.sh
(+51 files in other folders)
