[project]
name = "labor-law-ai"
version = "0.1.0"
description = "劳动法智能维权 AI Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "paddleocr>=2.9.0",
    "paddlepaddle>=3.0.0",
    "cos-python-sdk-v5>=1.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
